--- a/core/index.html
+++ b/core/index.html
@@ -3,9 +3,9 @@
 	<head>
 		<meta charset="UTF-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1.0" />
-		<link rel="icon" href="https://cdn.worldvectorlogo.com/logos/svelte-1.svg" />
+		<link rel="icon" href="https://cdn.worldvectorlogo.com/logos/twitter-6.svg" />
 		<link rel="stylesheet" href="/node_modules/reveal.js/dist/reveal.css" />
-		<title>Sub Bab Kelas X</title>
+		<title>hati2diinternet</title>
 	</head>
 	<body>
 		<div id="app"></div>
