--- a/core/index.html
+++ b/core/index.html
@@ -3,9 +3,14 @@
 	<head>
 		<meta charset="UTF-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1.0" />
-		<link rel="icon" href="https://cdn.worldvectorlogo.com/logos/twitter-6.svg" />
+		<meta name="description" content="sic semper tyrannis">
+		<meta name="author" content="archangel-12">
+
+		<meta name="apple-mobile-web-app-capable" content="yes">
+		<meta name="apple-mobile-web-app-status-bar-style" content="black-translucent">
+		<link rel="icon" href="https://cdn.worldvectorlogo.com/logos/gitter-1.svg" />
 		<link rel="stylesheet" href="/node_modules/reveal.js/dist/reveal.css" />
-		<title>hati2diinternet</title>
+		<title>Archillect</title>
 	</head>
 	<body>
 		<div id="app"></div>
