--- a/core/index.html
+++ b/core/index.html
@@ -8,9 +8,9 @@
 
 		<meta name="apple-mobile-web-app-capable" content="yes">
 		<meta name="apple-mobile-web-app-status-bar-style" content="black-translucent">
-		<link rel="icon" href="https://cdn.worldvectorlogo.com/logos/gitter-1.svg" />
+		<link rel="icon" href="./src/img/lmao.jpg" />
 		<link rel="stylesheet" href="/node_modules/reveal.js/dist/reveal.css" />
-		<title>Archillect</title>
+		<title>Kumpulan materi kelas XI</title>
 	</head>
 	<body>
 		<div id="app"></div>
